--- a/src/pages/four/u.css
+++ b/src/pages/four/u.css
@@ -30,10 +30,10 @@
 }
 
 .oxp {
-  width: 100%;
+  /* width: 100%; */
   /* object-fit: cover; */
-  overflow: hidden;
-  height: 100%;
+  /* overflow: hidden; */
+  /* height: 100%; */
 }
 
 .four_png {
