--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,9 @@
   width: 100%;
   /* background-color: #020817; */
 }
-
+.malx{
+  font-family: "firalight";
+}
 
 .ax {
   display: flex;
@@ -45,6 +47,8 @@
 
 .cxz{
   margin: 10px 10px;
+  position: sticky;
+  top: 0;
 
 }
 @font-face {
@@ -91,6 +95,18 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
+
+  
+}
+
+.bio_card_shown_top{
+}
+
+.doy{
+  font-family: "fira";
+
+  color: var(--green);
+  text-decoration: underline;
 }
 
 /* Your existing CSS styles */
@@ -153,16 +169,17 @@
 .second {
   /* padding:0px 20px; */
 }
-
+.nedda{
+width: 15px;
+}
 .app_label {
   /* border: 1px solid #1c2538; */
   border-radius: 0;
   font-size: 12px;
   text-transform: uppercase;
-  color: rgb(148, 163, 184);
+  color: #94a3b8;
 
-  padding-top: 15px;
-  padding-left: 20px;
+
   font-family: "Inter";
 }
 
